test/files/invalid/order_include_namespace.stderr
error: Cannot have includes after the namespace has been set
  ┌─ test/files/invalid/order_include_namespace.fbs:1:1
  │
1 │ namespace Foo;
  │ -------------- namespace was here
2 │ include "/dev/null";
  │ -------------------- include was here

Error: Bailing because of errors
